--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "FIXME"
-description = "FIXME"
+name = "tinybench"
+description = "tinybench"
 version = "0.0.1"
 readme = "README.md"
 
@@ -11,8 +11,6 @@ authors = [
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "Topic :: Games/Entertainment",
-    "Topic :: Software Development :: Libraries :: pygame",
 ]
 
 license = "MIT"
@@ -24,41 +22,10 @@ dependencies = [
     "ddframework @ git+https://github.com/dickerdackel/ddframework",
 ]
 
-[project.scripts]
-FIXME = "package.module:main"
-
 [project.urls]
-homepage = "https://github.com/dickerdackel/FIXME"
-bugtracker = "https://github.com/DickerDackel/FIXME/issues"
+homepage = "https://github.com/dickerdackel/tinybench"
+bugtracker = "https://github.com/DickerDackel/tinybench/issues"
 
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
-
-[tool.pytest.ini_options]
-addopts = "-rA"
-testpaths = [
-    "tests",
-]
-
-[tool.ruff]
-ignore = [
-    # "ANN",
-    "E501",
-    "E701",
-    "E731",
-    "E741",
-    "I001",
-    "PLR2004",
-]
-line-length = 100
-
-[tool.ruff.lint.isort]
-force-sort-within-sections = false
-known-third-party = ["pygame", "numpy", "tinyecs", "patternegine", "pgcooldown", "rpeasings"]
-lines-between-types = 1
-
-[tool.cibuildwheel]
-# Don't build for pypy
-skip = "pp*"
-build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
